--- a/scripts/styles.css
+++ b/scripts/styles.css
@@ -991,3 +991,36 @@ table th {
     overflow-x: auto; 
   }
 }
+
+/* CSS for formatting code blocks */
+pre code {
+  display: block;
+  padding: 10px;
+  background-color: var(--prism-background-color);
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  font-size: 14px;
+  line-height: 1.6;
+  font-family: "JetBrains Mono", sans-serif;
+
+  white-space: pre-wrap; /* Wrap long lines */
+  word-wrap: break-word; /* Handle long words */
+  overflow-x: auto; /* Add horizontal scrolling for long code */
+  color: var(--prism-text-color); /* Text color */
+}
+
+code {
+  font-family: "JetBrains Mono", sans-serif;
+
+}
+
+.prism-light-theme {
+  --prism-background-color: #f5f5f5;
+  --prism-text-color: #333;
+}
+
+/* Dark theme for Prism.js */
+.prism-theme {
+  --prism-background-color: var(--bg-color);
+  --prism-text-color: var(--text-color-secondary);
+}
